// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`should load an existing store 1`] = `
[
  {
    "description": "Build the documentation website locally.",
    "isGlobal": true,
    "manifestPath": "package.json",
    "projectName": "default",
    "scriptCode": "docker run --rm -it -p 8000:8000 -v \${PWD}:/docs squidfunk/mkdocs-material build --site-dir=public",
    "scriptName": "docs:build",
  },
  {
    "description": "Rebuilds the \`node-scripts-docs\` documentation for this project itself.",
    "isGlobal": true,
    "manifestPath": "package.json",
    "projectName": "default",
    "scriptCode": "yarn nsd-debug --include-locals",
    "scriptName": "docs:scripts",
  },
  {
    "description": "Runs the mkdocs-material development server.",
    "isGlobal": true,
    "manifestPath": "package.json",
    "projectName": "default",
    "scriptCode": "docker run --rm -it -p 8000:8000 -v \${PWD}:/docs squidfunk/mkdocs-material",
    "scriptName": "docs:serve",
  },
  {
    "description": "Build the latest sources and then \`npm publish\` the current state.",
    "isGlobal": true,
    "manifestPath": "package.json",
    "projectName": "default",
    "scriptCode": "yarn build && npm publish",
    "scriptName": "npm:publish",
  },
  {
    "isGlobal": true,
    "manifestPath": "package.json",
    "projectName": "default",
    "scriptCode": "yarn build && npm version patch && npm publish",
    "scriptName": "npm:publish:patch",
  },
  {
    "isGlobal": true,
    "manifestPath": "package.json",
    "projectName": "default",
    "scriptCode": "jest --coverage",
    "scriptName": "test:coverage",
  },
]
`;

exports[`should load an existing store 2`] = `
[
  {
    "description": "Build the TypeScript sources.",
    "isGlobal": false,
    "manifestPath": "package.json",
    "projectName": "default",
    "scriptCode": "tsc",
    "scriptName": "build",
  },
  {
    "description": "Build the documentation website locally.",
    "isGlobal": true,
    "manifestPath": "package.json",
    "projectName": "default",
    "scriptCode": "docker run --rm -it -p 8000:8000 -v \${PWD}:/docs squidfunk/mkdocs-material build --site-dir=public",
    "scriptName": "docs:build",
  },
  {
    "description": "Rebuilds the \`node-scripts-docs\` documentation for this project itself.",
    "isGlobal": true,
    "manifestPath": "package.json",
    "projectName": "default",
    "scriptCode": "yarn nsd-debug --include-locals",
    "scriptName": "docs:scripts",
  },
  {
    "description": "Runs the mkdocs-material development server.",
    "isGlobal": true,
    "manifestPath": "package.json",
    "projectName": "default",
    "scriptCode": "docker run --rm -it -p 8000:8000 -v \${PWD}:/docs squidfunk/mkdocs-material",
    "scriptName": "docs:serve",
  },
  {
    "description": "Build the latest sources and then \`npm publish\` the current state.",
    "isGlobal": true,
    "manifestPath": "package.json",
    "projectName": "default",
    "scriptCode": "yarn build && npm publish",
    "scriptName": "npm:publish",
  },
  {
    "isGlobal": true,
    "manifestPath": "package.json",
    "projectName": "default",
    "scriptCode": "yarn build && npm version patch && npm publish",
    "scriptName": "npm:publish:patch",
  },
  {
    "description": "Build the latest sources and then use the build output to execute your command. Parameters are passed through by \`yarn\`.",
    "isGlobal": false,
    "manifestPath": "package.json",
    "projectName": "default",
    "scriptCode": "yarn build && node output/node-scripts-docs.js",
    "scriptName": "nsd-debug",
  },
  {
    "isGlobal": false,
    "manifestPath": "package.json",
    "projectName": "default",
    "scriptCode": "jest",
    "scriptName": "test",
  },
  {
    "isGlobal": true,
    "manifestPath": "package.json",
    "projectName": "default",
    "scriptCode": "jest --coverage",
    "scriptName": "test:coverage",
  },
]
`;
